--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="hero">
       <div>
         <p class="eyebrow">Letterbox Lab</p>
-        <h1>导入照片，裁切并添加电影遮幅</h1>
+        <h1>导入照片，裁切并添加遮幅</h1>
         <p class="sub">在浏览器中完成裁切、比例调整与遮幅导出，保持原图尺寸输出。</p>
       </div>
       <div class="ratio-badge">
